--- a/app.json
+++ b/app.json
@@ -25,6 +25,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "36212e56-dfe1-48c0-bac7-08c51f107bbc"
+      }
     }
   }
 }
